--- a/Ketch/User Interface/NewConnection/NewConnectionView.xib
+++ b/Ketch/User Interface/NewConnection/NewConnectionView.xib
@@ -50,7 +50,7 @@
                     <color key="textColor" red="0.078431372549019607" green="0.32156862745098042" blue="0.45490196078431372" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cgP-ZZ-1cf" userLabel="Left Avatar">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="cgP-ZZ-1cf" userLabel="Left Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="29" y="255" width="100.5" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="cgP-ZZ-1cf" secondAttribute="height" multiplier="1:1" id="MhK-Y2-WRW"/>
@@ -62,7 +62,7 @@
                         </mask>
                     </variation>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KwU-Ms-43D" userLabel="Center Avatar">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="KwU-Ms-43D" userLabel="Center Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="109.5" y="255" width="100" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="KwU-Ms-43D" secondAttribute="height" multiplier="1:1" id="XYt-7C-aSn"/>
@@ -74,7 +74,7 @@
                         </mask>
                     </variation>
                 </imageView>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PnP-gQ-3vx" userLabel="Right Avatar">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PnP-gQ-3vx" userLabel="Right Avatar" customClass="UserAvatarView" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="190.5" y="255" width="100.5" height="100"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="PnP-gQ-3vx" secondAttribute="height" multiplier="1:1" id="bsr-0M-9SN"/>
@@ -92,7 +92,7 @@
                         <constraint firstAttribute="width" secondItem="yQA-Zd-Dv2" secondAttribute="height" multiplier="80:57" id="G6Q-cb-JFH"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I2c-Q5-UHl" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="I2c-Q5-UHl" customClass="DesignableLabel" customModule="Ketch" customModuleProvider="target">
                     <rect key="frame" x="20" y="374" width="280" height="96"/>
                     <constraints>
                         <constraint firstAttribute="width" secondItem="I2c-Q5-UHl" secondAttribute="height" multiplier="2:1" id="f5C-Ql-jaD"/>
